# YouTube-Summarizer

./: .gitignore  Dockerfile  README.md
YouTube-Summarizer/: LICENSE  Makefile  README.md  bert-test-result.csv  bert_score_result.json  bert_score_result2.json  docker-compose.yml  pyproject.toml  response_1733172444787.json  summary_test_results.json
YouTube-Summarizer/backend/: .env  Dockerfile  requirements-backend.txt
YouTube-Summarizer/backend/app/: diarization.py  llm.py  main.py  models.py  transcription.py  utils.py
YouTube-Summarizer/fastapi/: Dockerfile  main.py
YouTube-Summarizer/fastapi/app/: diarization.py  llm.py  main.py  models.py  transcription.py
YouTube-Summarizer/project_utils/: dir_setup.sh
YouTube-Summarizer/reflex-app/: Dockerfile  requirements-frontend.txt  rxconfig.py
YouTube-Summarizer/reflex-app/reflex_app/: reflex_app.py  utils.py
YouTube-Summarizer/reflex-app/reflex_app/pages/: index.py  output.py
YouTube-Summarizer/results/: result.txt  result_transcription.txt
YouTube-Summarizer/tests/: unit_tests.py
YouTube-Summarizer/tests/summary_tests/: create_summary.py  requirements.txt  run_summ_test.sh  summary_test.py
youtube_summarizer/: chat_idea.txt  pyproject.toml  rxconfig.py
youtube_summarizer/fastapi/: full.py
youtube_summarizer/pipeline/: download.py  full.py
youtube_summarizer/youtube_summarizer/: youtube_summarizer.py
youtube_summarizer/youtube_summarizer/pages/: index.py  output.py
