[tool.poetry]
name = "youtube-summarizer"
version = "0.1.0"
description = ""
authors = ["jkusnierz01 <jedrek33@onet.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
reflex = "^0.5.9"
numpy = "<2"
reflex-motion = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
